--- a/front_end/package.json
+++ b/front_end/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "element-plus": "^2.7.8",
+    "pinia": "^2.2.0",
     "vue": "^3.4.29"
   },
   "devDependencies": {
