修改主分支工作流触发条件

--- a/.github/workflows/auto-task.yml
+++ b/.github/workflows/auto-task.yml
@@ -3,9 +3,9 @@ name: 自动任务
 on:
   push:
     branches:
-      - dev
+      - main
   schedule:
-    - cron: '0 8 * * *'
+    - cron: '10 13 * * *'
 
 jobs:
   auto-task:
