--- a/.github/workflows/auto-task.yml
+++ b/.github/workflows/auto-task.yml
@@ -2,10 +2,10 @@ name: 自动任务
 
 on:
   push:
-    branches:
-      - main
+    # branches:
+    #   - main
   schedule:
-    - cron: '10 13 * * *'
+    - cron: '40 21 * * *'
 
 jobs:
   auto-task:
