--- a/.github/workflows/auto-task.yml
+++ b/.github/workflows/auto-task.yml
@@ -2,10 +2,10 @@ name: 自动任务
 
 on:
   push:
-    branches:
-      - dev
+    # branches:
+    #   - dev
   schedule:
-    - cron: '0 8 * * *'
+    - cron: '0 22 * * *'
 
 jobs:
   auto-task:
