--- a/.github/workflows/auto-task.yml
+++ b/.github/workflows/auto-task.yml
@@ -1,11 +1,11 @@
 name: 自动任务
 
 on:
-  push:
+  # push:
     # branches:
     #   - dev
   schedule:
-    - cron: '0 22 * * *'
+    - cron: '0 0 * * *'
 
 jobs:
   auto-task:
