--- a/back_end/database_config/mysql_config.json
+++ b/back_end/database_config/mysql_config.json
@@ -1,14 +1,17 @@
 {
-  "config": {
+  "connect_config": {
         "host": "127.0.0.1",
         "user": "root",
         "password": "123456",
         "charset": "utf8"
     },
-  "tables": {
-        "user": "create table if not exists `user` (`user_name` varchar(32), `password` varchar(32) not null,`email` varchar(32),`vip` boolean  not null default false,primary key (`user_name`)) ENGINE=InnoDB DEFAULT CHARSET=utf8;"
-    },
-    "data_users": [
+  "tables": [
+    {
+      "table_name": "user",
+      "table_description": "create table if not exists `user` (`user_name` varchar(32), `password` varchar(32) not null,`email` varchar(32),`vip` boolean  not null default false,primary key (`user_name`)) ENGINE=InnoDB DEFAULT CHARSET=utf8;"
+    }
+  ],
+    "users_data": [
         {
             "user_name": "admin",
             "password": "admin",
