添加文件至gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ back_end/task/__pycache__/quark_task.cpython-312.pyc
 back_end/utils/__pycache__/common.cpython-312.pyc
 back_end/task/__pycache__/quark_task.cpython-312.pyc
 node_modules/
+back_end/utils/__pycache__/common.cpython-312.pyc
