修复前端跨域问题（vite.config.ts server）美化注册页面

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ back_end/utils/__pycache__/common.cpython-312.pyc
 back_end/task/__pycache__/quark_task.cpython-312.pyc
 node_modules/
 back_end/utils/__pycache__/common.cpython-312.pyc
+back_end/__pycache__/app.cpython-312.pyc
